# KiT-RT

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CMakeLists.txt  Dockerfile  LICENCE.md  LICENSE  README.md  action.yml  requirements.txt
code/: .clang-format  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.orig  config_template.cfg  spherical_harmonics_rotation.cpp
code/cmake/: FindSphinx.cmake
code/include/: cubic2dspline.h  icru.h  interpolation.h  io.h  laxfriedrichsflux.h  mesh.h  numericalflux.h  option_structure.h  physics.h  pnsolver.h  pyhelper.hpp  qdummy.h  qgausslegendretensorized.h  qldfesa.h  qlebedev.h  qlevelsymmetric.h  qlookupquadrature.h  qmontecarlo.h  quadrature.h  reconstructor.h  settings.h  snsolver.h  snsolverMPI.h  solver.h  spline.h  typedef.h  upwindflux.h
code/include/common/: config.h  globalconstants.h  io.h  mesh.h  optionstructure.h  pch.h
code/include/drivers/: dummydriver.h  entropyclosuredriver.h
code/include/entropies/: entropybase.h  maxwellboltzmannentropy.h  quadraticentropy.h
code/include/entropyoptimizers/: entropyfunctional.h  momentbasis.h  newtonoptimizer.h
code/include/fluxes/: laxfriedrichsflux.h  numericalflux.h  upwindflux.h
code/include/gui/: mainwindow.h
code/include/kernels/: isotropic.h  isotropic1D.h  scatteringkernelbase.h
code/include/optimizers/: mloptimizer.h  newtonoptimizer.h  optimizerbase.h
code/include/problems/: aircavity1d.h  checkerboard.h  electronrt.h  epics.h  icru.h  isotropicsource2d.h  linesource.h  musclebonelung.h  phantom2d.h  problembase.h  slabgeohg.h  waterphantom.h
code/include/quadratures/: lookuptable_ldfesa.h  lookuptable_levelsymmetric.h  productquadrature.h  qdummy.h  qgausschebyshev1D.h  qgausslegendre1D.h  qgausslegendretensorized.h  qldfesa.h  qlebedev.h  qlevelsymmetric.h  qlookupquadrature.h  qmontecarlo.h  qproduct.h  quadrature.h  quadraturebase.h
code/include/settings/: CConfig.h  GlobalConstants.h  OptionStructure.h  config.h  globalconstants.h  optionstructure.h
code/include/solvers/: advectionsolver.h  csdpnsolver.h  csdsnsolver.h  csdsnsolverfp.h  csdsnsolverfp2d.h  csdsnsolvernotrafo.h  csdsolvertrafofp.h  csdsolvertrafofp2d.h  csdsolvertrafofpsh2d.h  entropysolver.h  mnsolver.h  pnsolver.h  snsolver.h  snsolverMPI.h  solverbase.h  sphericalharmonics.h
code/include/toolboxes/: CRTSNError.h  NIoToolBox.h  TextProcessingToolbox.h  cubic2dspline.h  datagenerator.h  datagenerator1D.h  datagenerator3D.h  datageneratorbase.h  errormessages.h  interpolation.h  physics.h  reconstructor.h  sphericalbase.h  sphericalbasisbase.h  sphericalharmonics.h  sphericalmonomials.h  textprocessingtoolbox.h
code/input/: 1DMesh.geo  1DMesh.su2  DataGenerator.cfg  DataGenerator1D.cfg  DataGenerator2D.cfg  aircavity_csd_1d.cfg  checkerboard.cfg  checkerboard.py  checkerboard.su2  checkerboard_MN.cfg  checkerboard_PN.cfg  checkerboard_SN.cfg  example.cfg  example.toml  exampleCSDSN.cfg  exampleDataGen.cfg  exampleMN.cfg  examplePN.cfg  exampleSN.cfg  exampleWaterphantomCSD.cfg  example_csd.cfg  example_csd_1d.cfg  linesource.cfg  linesource.py  linesource.su2  linesource_MN.cfg  linesource_PN.cfg  linesource_SN.cfg  phantom2D.su2  phantom2d_csd.cfg  pointSource_PNCSD.cfg  pointSource_fd_csd.cfg  pointSource_sph_csd.cfg  stopping_power.txt  waterphantom_1D.cfg  waterphantom_2D.cfg
code/input/meshes/: linesource.su2  linesource_debug.su2  linesource_mc_triangles.py  linesource_mc_triangles.su2
code/input/neural_network_model/: _EntropyLoss_1_300_M_0_hist.json  best_model_1_300.h5
code/python/: AssLegendrePlotter.m  Generating_specialised_mesh.py  assLegendre.csv  callNN.py  callNN_MK1.py  callNN_MK3.py  contour_selc.py  examples.py  extract_grayscale_image.py  harmonicTest.csv  harmonicTest2.csv  linesource_Pseudo_1D.py  mesh_from_image.py  meshgenauto.py  plotAssLegendre.py  plotBasis.py  plotsphericalbasis.py  trainNN.py
code/python/data/: trainNN.csv.REMOVED.git-id
code/python/neural_entropy/: CPU_run_job.sh  EntropyTrainEvaluator.ipynb  EntropyTrainer.ipynb  callNN.py  run_job.sh  run_jobGPU.sh  trainNNMK2.py
code/python/testScripts/: Tensorflow_Quickstart.py  TrainModel.py  employModel.py  local_learning.py
code/src/: cubic2dspline.cpp  factorial_example.cpp  icru.cpp  interpolation.cpp  io.cpp  laxfriedrichsflux.cpp  main.cpp  mesh.cpp  numericalflux.cpp  physics.cpp  pnsolver.cpp  qdummy.cpp  qgausslegendretensorized.cpp  qldfesa.cpp  qlebedev.cpp  qlevelsymmetric.cpp  qlookupquadrature.cpp  qmontecarlo.cpp  quadrature.cpp  quadrature.h  reconstructor.cpp  settings.cpp  snsolver.cpp  snsolverMPI.cpp  solver.cpp  spline.cpp  upwindflux.cpp
code/src/common/: config.cpp  io.cpp  mesh.cpp  optionstructure.cpp
code/src/drivers/: dummydriver.cpp  entropyclosuredriver.cpp
code/src/entropies/: entropybase.cpp
code/src/entropyoptimizers/: entropyfunctional.cpp  momentbasis.cpp  newtonoptimizer.cpp
code/src/fluxes/: laxfriedrichsflux.cpp  numericalflux.cpp  upwindflux.cpp
code/src/gui/: mainwindow.cpp  mainwindow.ui
code/src/kernels/: isotropic.cpp  isotropic1D.cpp  scatteringkernelbase.cpp
code/src/optimizers/: mloptimizer.cpp  newtonoptimizer.cpp  optimizerbase.cpp
code/src/problems/: aircavity1d.cpp  checkerboard.cpp  electronrt.cpp  epics.cpp  icru.cpp  isotropicsource2d.cpp  linesource.cpp  musclebonelung.cpp  musclebonelung.cpp.orig  phantom2d.cpp  problembase.cpp  slabgeohg.cpp  waterphantom.cpp
code/src/quadratures/: productquadrature.cpp  qdummy.cpp  qgausschebyshev1D.cpp  qgausslegendre1D.cpp  qgausslegendretensorized.cpp  qldfesa.cpp  qlebedev.cpp  qlevelsymmetric.cpp  qlookupquadrature.cpp  qmontecarlo.cpp  qproduct.cpp  quadrature.cpp  (+1 more)
code/tests/: catch2_main.cpp  factorial_example_test.cpp  mesh.cpp  numericalflux.cpp  quadrature.cpp  test_cases.cpp  test_config.cpp  test_harmonics.cpp  test_image_conversion.cpp  test_interpolation.cpp  test_kernel.cpp  test_mesh.cpp  test_numericalflux.cpp  test_optimizer.cpp  test_physics.cpp  test_quadrature.cpp  test_sphericalBasis.cpp  testcases.cpp  tests_quadrature.cpp
(+1509 files in other folders)
